--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "flask-login (>=0.6.3,<0.7.0)",
     "bcrypt (>=4.3.0,<5.0.0)",
     "flask-wtf (>=1.2.2,<2.0.0)",
-    "wtforms (>=3.2.1,<4.0.0)"
+    "wtforms (>=3.2.1,<4.0.0)",
+    "matplotlib (>=3.10.3,<4.0.0)"
 ]
 
 [tool.poetry]
