--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Mcube",email = "mcube3575@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.11"
 dependencies = [
     "flask (>=3.1.1,<4.0.0)",
     "pymongo (>=4.13.2,<5.0.0)",
