--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "flask-wtf (>=1.2.2,<2.0.0)",
     "wtforms (>=3.2.1,<4.0.0)",
     "matplotlib (>=3.10.3,<4.0.0)",
-    "pydantic (>=2.11.7,<3.0.0)"
+    "pydantic (>=2.11.7,<3.0.0)",
+    "pillow (>=11.2.1,<12.0.0)"
 ]
 
 [tool.poetry]
