--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Run App",
             "type": "shell",
-            "command": "poetry run python src/infranet_team1/app.py",
+            "command": "poetry run python src/intranet_team1/app.py",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
